--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.6",
+    "framer-motion": "^12.4.4",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.3",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
